# softlab

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e227f6fc9c8e_initial_projects_analyses_issues.py
softlab/: config.py
softlab/api/: deps.py  main.py
softlab/api/routers/: analyses.py  projects.py
softlab/core/: graph_builder.py
softlab/models/: __init__.py  analysis.py  issue.py  project.py
softlab/modules/: base.py  registry.py
softlab/modules/static/: module.py  tools.py
softlab/providers/: factory.py
softlab/providers/llm/: base.py
softlab/providers/queue/: base.py
softlab/providers/storage/: base.py
tests/contract/: test_module_result.py
tests/fixtures/sample_projects/python_simple/: main.py
tests/unit/core/: test_graph_builder.py
tests/unit/modules/: test_static.py
